# cube-engine

./: Cargo.toml  README.md
src/: game.rs  main.rs
src/game/: camera.rs  chunk.rs  collision.rs  color.rs  input_handler.rs  player.rs  renderer.rs  shader.wgsl  world.rs
src/game/camera/: frustum.rs
src/game/chunk/: block.rs
src/game/renderer/: mesh.rs  old_camera.rs  texture.rs  ui.rs  uniforms.rs  vertex.rs
src/game/renderer/shaders/: ui.wgsl
